Se agregó la visualización y manejo de citas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".general.HomePageActivity" />
-        <activity android:name=".general.MainMenuActivity"></activity>
+        <activity android:name=".general.MainMenuActivity" />
+        <activity android:name=".general.AppointmentsActivity" />
+        <activity android:name=".general.AppointmentInfoActivity"></activity>
     </application>
 
 </manifest>
