--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".general.AppointmentsActivity" />
         <activity android:name=".general.AppointmentInfoActivity" />
         <activity android:name=".general.CasesManagementActivity" />
-        <activity android:name=".general.MedicTestsActivity"></activity>
+        <activity android:name=".general.MedicTestsActivity" />
+        <activity android:name=".general.MedicationManagementActivity"></activity>
     </application>
 
 </manifest>
