--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,18 +6,18 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/drapp"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Redhead">
-        <activity android:name=".general.SplashActivity">
+        <activity android:name=".general.SplashActivity" android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".general.HomePageActivity" />
+        <activity android:name=".general.HomePageActivity"/>
         <activity android:name=".general.MainMenuActivity" />
         <activity android:name=".general.AppointmentsActivity" />
         <activity
